feat: 为db提供支持

--- a/config.json
+++ b/config.json
@@ -1,6 +1,8 @@
 {
   "plugin_path": "plugins",
   "zero": {
-
+    "nick_name": ["bot"],
+    "command_prefix": "/",
+    "super_users": [1121917292]
   }
 }
